# NightreignRelicAssistant

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: deepnight_neg.txt  deepnight_pos.txt  normal.txt  normal_special.txt
demos/: bench.py  color_analyze.py  icon_detect.py  ocr_test.py
docs/superpowers/plans/: 2026-04-10-ui-implementation.md  2026-04-10-ui-v2-implementation.md
docs/superpowers/specs/: 2026-04-10-ui-design.md  2026-04-10-ui-v2-design.md
src/app/: __init__.py  bootstrap.py  container.py  main.py
src/core/: __init__.py
src/core/interfaces/: __init__.py  automation.py  detector.py  logger.py  ocr.py  repository.py  rule_engine.py
src/core/models/: __init__.py  history.py  ocr.py  preset.py  rules.py  runtime.py  workflow.py
src/infra/: __init__.py
src/infra/automation/: profiles.py  windows_gateway.py
src/infra/detection/: stub_detector.py
src/infra/logging/: app_logger.py
src/infra/ocr/: __init__.py  color.py  engine.py  matcher.py  models.py  ocr.py  relic_ocr_service.py  stub_ocr.py  title.py
src/infra/persistence/: history_repository.py  json_store.py  (+2 more)
src/nra/: __init__.py  main.py  web_ui.py
src/services/: __init__.py  history_service.py  preset_service.py  repo_service.py  save_service.py  settings_service.py  shop_service.py
src/ui/: __init__.py  config.py  main_window.py
tests/: test_preset_manager.py  test_vocabulary.py
tmp/tests/: conftest.py  test_ocr_service.py  test_preset_service.py  test_relic_engine_title.py  test_save_service.py  test_settings_service.py  test_vocabulary_loader.py
(+44 files in other folders)
