[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightreign-relic-assistant"
version = "0.1.0"
description = "黑夜君临遗物助手 - Elden Ring Nightreign 遗物自动化管理工具"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    # GUI
    "PySide6>=6.5.0",
    "PySide6-Fluent-Widgets>=1.0.0",
]

[project.optional-dependencies]
engine = [
    "rapidocr>=3.0.0",
    "onnxruntime>=1.16.0",
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "rapidfuzz>=2.0.0",
]
automation = [
    "pyautogui>=0.9.53",
    "pydirectinput>=1.0.2",
    "keyboard>=0.13.5",
    "pywin32>=305",
    "pygetwindow>=0.0.9",
]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[project.gui-scripts]
nra = "nra.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
