[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightreign-relic-assistant"
version = "0.1.0"
description = "Nightreign Relic Assistant rewrite"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.21.0",
  "onnxruntime>=1.16.0",
  "opencv-python>=4.5.0",
  "PySide6>=6.8.0",
  "PySide6-Fluent-Widgets>=1.11.0",
  "rapidfuzz>=2.0.0",
  "rapidocr>=3.0.0",
]

[project.gui-scripts]
nra = "app.main:main"

[tool.setuptools.packages.find]
where = ["src"]
